feat: add nozzle reading create check
